tests/NormalTests/paczka1/fuzzy1/77706596.err
Error in line 2: EgQLmn A468 62,6
Error in line 5: EgQLmn S936 72,0
Error in line 8: fXs A143 75,3
